Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Public/Generate/Export/APlayerController.h

	DOTNET_EXPORT auto E_PROP_APlayerController_AcknowledgedPawn_GET(APlayerController* Ptr) { return ConvertToManage_ObjectPointerDescription(Ptr->AcknowledgedPawn); }
	DOTNET_EXPORT void E_PROP_APlayerController_AcknowledgedPawn_SET(APlayerController* Ptr, APawn* Value) { Ptr->AcknowledgedPawn = Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerController_bAutoManageActiveCameraTarget_GET(APlayerController* Ptr) { return Ptr->bAutoManageActiveCameraTarget; }
	DOTNET_EXPORT void E_PROP_APlayerController_bAutoManageActiveCameraTarget_SET(APlayerController* Ptr, bool Value) { Ptr->bAutoManageActiveCameraTarget = Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerController_BlendedTargetViewRotation_GET(APlayerController* Ptr) { return (INT_PTR)&(Ptr->BlendedTargetViewRotation); }
	DOTNET_EXPORT void E_PROP_APlayerController_BlendedTargetViewRotation_SET(APlayerController* Ptr, INT_PTR Value) { Ptr->BlendedTargetViewRotation = *(FRotator*)Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerController_bRenderPrimitiveComponents_GET(APlayerController* Ptr) { return Ptr->bRenderPrimitiveComponents; }
	DOTNET_EXPORT void E_PROP_APlayerController_bRenderPrimitiveComponents_SET(APlayerController* Ptr, bool Value) { Ptr->bRenderPrimitiveComponents = Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerController_CheatManager_GET(APlayerController* Ptr) { return ConvertToManage_ObjectPointerDescription(Ptr->CheatManager); }
	DOTNET_EXPORT void E_PROP_APlayerController_CheatManager_SET(APlayerController* Ptr, UCheatManager* Value) { Ptr->CheatManager = Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerController_ClientCap_GET(APlayerController* Ptr) { return Ptr->ClientCap; }
	DOTNET_EXPORT void E_PROP_APlayerController_ClientCap_SET(APlayerController* Ptr, int32 Value) { Ptr->ClientCap = Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerController_ForceFeedbackScale_GET(APlayerController* Ptr) { return Ptr->ForceFeedbackScale; }
	DOTNET_EXPORT void E_PROP_APlayerController_ForceFeedbackScale_SET(APlayerController* Ptr, float Value) { Ptr->ForceFeedbackScale = Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerController_HitResultTraceDistance_GET(APlayerController* Ptr) { return Ptr->HitResultTraceDistance; }
	DOTNET_EXPORT void E_PROP_APlayerController_HitResultTraceDistance_SET(APlayerController* Ptr, float Value) { Ptr->HitResultTraceDistance = Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerController_InputPitchScale_GET(APlayerController* Ptr) { return Ptr->InputPitchScale; }
	DOTNET_EXPORT void E_PROP_APlayerController_InputPitchScale_SET(APlayerController* Ptr, float Value) { Ptr->InputPitchScale = Value; }
	DOTNET_EXPORT auto E_APlayerController_PostProcessWorldToScreen(APlayerController* Self, INT_PTR WorldLocation, INT_PTR ScreenLocation, bool bPlayerViewportRelative)
	{
		auto _p0 = *(FVector*)WorldLocation;
		auto& _p1 = *(FVector2D*)ScreenLocation;
		auto _p2 = bPlayerViewportRelative;
		return Self->PostProcessWorldToScreen(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_APlayerController_PostSeamlessTravel(APlayerController* Self)
	{
		Self->PostSeamlessTravel();
	}
	DOTNET_EXPORT auto E_APlayerController_PreProcessInput(APlayerController* Self, float DeltaTime, bool bGamePaused)
	{
		auto _p0 = DeltaTime;
		auto _p1 = bGamePaused;
		Self->PreProcessInput(_p0, _p1);
	}
	DOTNET_EXPORT auto E_APlayerController_ProjectWorldLocationToScreen(APlayerController* Self, INT_PTR WorldLocation, INT_PTR ScreenLocation, bool bPlayerViewportRelative)
	{
		auto _p0 = *(FVector*)WorldLocation;
		auto& _p1 = *(FVector2D*)ScreenLocation;
		auto _p2 = bPlayerViewportRelative;
		return Self->ProjectWorldLocationToScreen(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_APlayerController_ProjectWorldLocationToScreenWithDistance(APlayerController* Self, INT_PTR WorldLocation, INT_PTR ScreenLocation, bool bPlayerViewportRelative)
	{
		auto _p0 = *(FVector*)WorldLocation;
		auto& _p1 = *(FVector*)ScreenLocation;
		auto _p2 = bPlayerViewportRelative;
		return Self->ProjectWorldLocationToScreenWithDistance(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_APlayerController_ResetControllerLightColor(APlayerController* Self)
	{
		Self->ResetControllerLightColor();
	}
	DOTNET_EXPORT auto E_APlayerController_RestartLevel(APlayerController* Self)
	{
		Self->RestartLevel();
	}
	DOTNET_EXPORT auto E_APlayerController_SafeRetryClientRestart(APlayerController* Self)
	{
		Self->SafeRetryClientRestart();
	}
	DOTNET_EXPORT auto E_APlayerController_SafeServerCheckClientPossession(APlayerController* Self)
	{
		Self->SafeServerCheckClientPossession();
	}
	DOTNET_EXPORT auto E_APlayerController_SafeServerUpdateSpectatorState(APlayerController* Self)
	{
		Self->SafeServerUpdateSpectatorState();
	}
	DOTNET_EXPORT auto E_APlayerController_SeamlessTravelFrom(APlayerController* Self, APlayerController* OldPC)
	{
		auto _p0 = OldPC;
		Self->SeamlessTravelFrom(_p0);
	}
	DOTNET_EXPORT auto E_APlayerController_SeamlessTravelTo(APlayerController* Self, APlayerController* NewPC)
	{
		auto _p0 = NewPC;
		Self->SeamlessTravelTo(_p0);
	}
	DOTNET_EXPORT auto E_APlayerController_SendToConsole(APlayerController* Self, char* Command)
	{
		auto _p0 = ConvertFromManage_FString(Command);
		Self->SendToConsole(_p0);
	}
	DOTNET_EXPORT auto E_APlayerController_ServerAcknowledgePossession(APlayerController* Self, APawn* P)
	{
		auto _p0 = P;
		Self->ServerAcknowledgePossession(_p0);
	}
	DOTNET_EXPORT auto E_APlayerController_ServerCamera(APlayerController* Self, char* NewMode)
	{
		auto _p0 = ConvertFromManage_FName(NewMode);
		Self->ServerCamera(_p0);
	}
	DOTNET_EXPORT auto E_APlayerController_ServerChangeName(APlayerController* Self, char* S)
	{
		auto _p0 = ConvertFromManage_FString(S);
		Self->ServerChangeName(_p0);
	}
	DOTNET_EXPORT auto E_APlayerController_ServerCheckClientPossession(APlayerController* Self)
	{
		Self->ServerCheckClientPossession();
	}
	DOTNET_EXPORT auto E_APlayerController_ServerCheckClientPossessionReliable(APlayerController* Self)
	{
		Self->ServerCheckClientPossessionReliable();
	}
	DOTNET_EXPORT auto E_APlayerController_ServerNotifyLoadedWorld(APlayerController* Self, char* WorldPackageName)
	{
		auto _p0 = ConvertFromManage_FName(WorldPackageName);
		Self->ServerNotifyLoadedWorld(_p0);
	}
	DOTNET_EXPORT auto E_APlayerController_ServerPause(APlayerController* Self)
	{
		Self->ServerPause();
	}
	DOTNET_EXPORT auto E_APlayerController_ServerRestartPlayer(APlayerController* Self)
	{
		Self->ServerRestartPlayer();
	}
	DOTNET_EXPORT auto E_APlayerController_ServerSetSpectatorLocation(APlayerController* Self, INT_PTR NewLoc, INT_PTR NewRot)
	{
		auto _p0 = *(FVector*)NewLoc;
		auto _p1 = *(FRotator*)NewRot;
		Self->ServerSetSpectatorLocation(_p0, _p1);
	}
	DOTNET_EXPORT auto E_APlayerController_ServerSetSpectatorWaiting(APlayerController* Self, bool bWaiting)
	{
		auto _p0 = bWaiting;
		Self->ServerSetSpectatorWaiting(_p0);
	}
	DOTNET_EXPORT auto E_APlayerController_ServerShortTimeout(APlayerController* Self)
	{
		Self->ServerShortTimeout();
	}
	DOTNET_EXPORT auto E_APlayerController_ServerToggleAILogging(APlayerController* Self)
	{
		Self->ServerToggleAILogging();
	}
	DOTNET_EXPORT auto E_APlayerController_ServerUpdateLevelVisibility(APlayerController* Self, char* PackageName, bool bIsVisible)
	{
		auto _p0 = ConvertFromManage_FName(PackageName);
		auto _p1 = bIsVisible;
		Self->ServerUpdateLevelVisibility(_p0, _p1);
	}
	DOTNET_EXPORT auto E_APlayerController_ServerVerifyViewTarget(APlayerController* Self)
	{
		Self->ServerVerifyViewTarget();
	}
	DOTNET_EXPORT auto E_APlayerController_ServerViewNextPlayer(APlayerController* Self)
	{
		Self->ServerViewNextPlayer();
	}
	DOTNET_EXPORT auto E_APlayerController_ServerViewPrevPlayer(APlayerController* Self)
	{
		Self->ServerViewPrevPlayer();
	}
	DOTNET_EXPORT auto E_APlayerController_SetCinematicMode(APlayerController* Self, bool bInCinematicMode, bool bAffectsMovement, bool bAffectsTurning)
	{
		auto _p0 = bInCinematicMode;
		auto _p1 = bAffectsMovement;
		auto _p2 = bAffectsTurning;
		Self->SetCinematicMode(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_APlayerController_SetDisableHaptics(APlayerController* Self, bool bNewDisabled)
	{
		auto _p0 = bNewDisabled;
		Self->SetDisableHaptics(_p0);
	}
	DOTNET_EXPORT auto E_APlayerController_SetMouseLocation(APlayerController* Self, int X, int Y)
	{
		auto _p0 = X;
		auto _p1 = Y;
		Self->SetMouseLocation(_p0, _p1);
	}
	DOTNET_EXPORT auto E_APlayerController_SetName(APlayerController* Self, char* S)
	{
		auto _p0 = ConvertFromManage_FString(S);
		Self->SetName(_p0);
	}
	DOTNET_EXPORT auto E_APlayerController_SetVirtualJoystickVisibility(APlayerController* Self, bool bVisible)
	{
		auto _p0 = bVisible;
		Self->SetVirtualJoystickVisibility(_p0);
	}
	DOTNET_EXPORT auto E_APlayerController_StartFire(APlayerController* Self, uint8 FireModeNum)
	{
		auto _p0 = FireModeNum;
		Self->StartFire(_p0);
	}
	DOTNET_EXPORT auto E_APlayerController_StartTalking(APlayerController* Self)
	{
		Self->StartTalking();
	}
	DOTNET_EXPORT auto E_APlayerController_StopTalking(APlayerController* Self)
	{
		Self->StopTalking();
	}
	DOTNET_EXPORT auto E_APlayerController_SwitchLevel(APlayerController* Self, char* URL)
	{
		auto _p0 = ConvertFromManage_FString(URL);
		Self->SwitchLevel(_p0);
	}
	DOTNET_EXPORT auto E_APlayerController_ToggleSpeaking(APlayerController* Self, bool bInSpeaking)
	{
		auto _p0 = bInSpeaking;
		Self->ToggleSpeaking(_p0);
	}
	DOTNET_EXPORT auto E_APlayerController_UnFreeze(APlayerController* Self)
	{
		Self->UnFreeze();
	}
	DOTNET_EXPORT auto E_APlayerController_UpdateRotation(APlayerController* Self, float DeltaTime)
	{
		auto _p0 = DeltaTime;
		Self->UpdateRotation(_p0);
	}