Plugins/UnrealDotNet/Source/UnrealEngineSharp/Generate/Class/APlayerController.cs

		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_APlayerController_PostProcessWorldToScreen(IntPtr self, IntPtr worldLocation, IntPtr screenLocation, bool bPlayerViewportRelative);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_PostSeamlessTravel(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_PreProcessInput(IntPtr self, float deltaTime, bool bGamePaused);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_APlayerController_ProjectWorldLocationToScreen(IntPtr self, IntPtr worldLocation, IntPtr screenLocation, bool bPlayerViewportRelative);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_APlayerController_ProjectWorldLocationToScreenWithDistance(IntPtr self, IntPtr worldLocation, IntPtr screenLocation, bool bPlayerViewportRelative);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_ResetControllerLightColor(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_RestartLevel(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_SafeRetryClientRestart(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_SafeServerCheckClientPossession(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_SafeServerUpdateSpectatorState(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_SeamlessTravelFrom(IntPtr self, IntPtr oldPC);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_SeamlessTravelTo(IntPtr self, IntPtr newPC);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_SendToConsole(IntPtr self, string command);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_ServerAcknowledgePossession(IntPtr self, IntPtr p);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_ServerCamera(IntPtr self, string newMode);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_ServerChangeName(IntPtr self, string s);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_ServerCheckClientPossession(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_ServerCheckClientPossessionReliable(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_ServerNotifyLoadedWorld(IntPtr self, string worldPackageName);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_ServerPause(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_ServerRestartPlayer(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_ServerSetSpectatorLocation(IntPtr self, IntPtr newLoc, IntPtr newRot);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_ServerSetSpectatorWaiting(IntPtr self, bool bWaiting);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_ServerShortTimeout(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_ServerToggleAILogging(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_ServerUpdateLevelVisibility(IntPtr self, string packageName, bool bIsVisible);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_ServerUpdateMultipleLevelsVisibility(IntPtr self, IntPtr levelVisibilities);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_ServerVerifyViewTarget(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_ServerViewNextPlayer(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_ServerViewPrevPlayer(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_SetCinematicMode(IntPtr self, bool bInCinematicMode, bool bAffectsMovement, bool bAffectsTurning);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_SetDisableHaptics(IntPtr self, bool bNewDisabled);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_SetMouseLocation(IntPtr self, int x, int y);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_SetName(IntPtr self, string s);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_SetVirtualJoystickVisibility(IntPtr self, bool bVisible);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_StartFire(IntPtr self, byte fireModeNum);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_StartTalking(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_StopTalking(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_SwitchLevel(IntPtr self, string uRL);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_ToggleSpeaking(IntPtr self, bool bInSpeaking);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_UnFreeze(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APlayerController_UpdateRotation(IntPtr self, float deltaTime);
		
		#endregion
		
		#region Property
		public APawn AcknowledgedPawn
		{
			get => E_PROP_APlayerController_AcknowledgedPawn_GET(NativePointer);
			set => E_PROP_APlayerController_AcknowledgedPawn_SET(NativePointer, value);
		}

		public TArray<FActiveForceFeedbackEffect> ActiveForceFeedbackEffects
		{
			get => E_PROP_APlayerController_ActiveForceFeedbackEffects_GET(NativePointer);
			set => E_PROP_APlayerController_ActiveForceFeedbackEffects_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>True to allow this player controller to manage the camera target for you, </para>
		/// <para>typically by using the possessed pawn as the camera target. Set to false </para>
		/// <para>if you want to manually control the camera target. </para>
		/// </summary>
		public bool bAutoManageActiveCameraTarget
		{
			get => E_PROP_APlayerController_bAutoManageActiveCameraTarget_GET(NativePointer);
			set => E_PROP_APlayerController_bAutoManageActiveCameraTarget_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Smoothed version of TargetViewRotation to remove jerkiness from intermittent replication updates. </para>
		/// </summary>
		public FRotator BlendedTargetViewRotation
		{
			get => E_PROP_APlayerController_BlendedTargetViewRotation_GET(NativePointer);
			set => E_PROP_APlayerController_BlendedTargetViewRotation_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Whether to render primitives component. </para>
		/// </summary>
		public bool bRenderPrimitiveComponents
		{
			get => E_PROP_APlayerController_bRenderPrimitiveComponents_GET(NativePointer);
			set => E_PROP_APlayerController_bRenderPrimitiveComponents_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Object that manages "cheat" commands.  Not instantiated in shipping builds. </para>
		/// </summary>
		public UCheatManager CheatManager
		{
			get => E_PROP_APlayerController_CheatManager_GET(NativePointer);
			set => E_PROP_APlayerController_CheatManager_SET(NativePointer, value);
		}

		public int ClientCap
		{
			get => E_PROP_APlayerController_ClientCap_GET(NativePointer);
			set => E_PROP_APlayerController_ClientCap_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>For debugging, shows the last force feeback effects that played </para>
		/// </summary>
		public TArray<FForceFeedbackEffectHistoryEntry> ForceFeedbackEffectHistoryEntries
		{
			get => E_PROP_APlayerController_ForceFeedbackEffectHistoryEntries_GET(NativePointer);
			set => E_PROP_APlayerController_ForceFeedbackEffectHistoryEntries_SET(NativePointer, value);
		}

		public float ForceFeedbackScale
		{
			get => E_PROP_APlayerController_ForceFeedbackScale_GET(NativePointer);
			set => E_PROP_APlayerController_ForceFeedbackScale_SET(NativePointer, value);
		}

		public TArray<AActor> HiddenActors
		{
			get => E_PROP_APlayerController_HiddenActors_GET(NativePointer);
			set => E_PROP_APlayerController_HiddenActors_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Distance to trace when computing click events </para>
		/// </summary>
		public float TraceDistance
		{
			get => E_PROP_APlayerController_HitResultTraceDistance_GET(NativePointer);
			set => E_PROP_APlayerController_HitResultTraceDistance_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Pitch input speed scaling </para>
		/// </summary>
		public float InputPitchScale
		{
			get => E_PROP_APlayerController_InputPitchScale_GET(NativePointer);
			set => E_PROP_APlayerController_InputPitchScale_SET(NativePointer, value);
		}

